# CannyDeriche

./: CMakeLists.txt  README.md  main.cpp
